[gd_scene load_steps=33 format=2]

[ext_resource path="res://Levels/Begin/Sprites/Lamp.png" type="Texture" id=1]
[ext_resource path="res://Levels/Begin/Sprites/Cartwheel.png" type="Texture" id=2]
[ext_resource path="res://Levels/Begin/Sprites/MineCartEmpty.png" type="Texture" id=3]
[ext_resource path="res://Shaders/Light1.png" type="Texture" id=4]
[ext_resource path="res://Levels/Begin/Sprites/MovingCart.gd" type="Script" id=5]
[ext_resource path="res://Misc/Overlap/HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Begin/Sprites/CartLeverCircle.png" type="Texture" id=7]
[ext_resource path="res://Levels/Begin/Sprites/CartLeverBreak.png" type="Texture" id=8]

[sub_resource type="OccluderPolygon2D" id=164]
polygon = PoolVector2Array( -19.8445, -6.08984, -19.9228, -2.02897, -16.1686, 12.8211, -17.2531, 13.1548, -17.0863, 17.9936, -15.084, 17.9936, -13.1652, 20.5799, -8.49324, 20.8302, -5.90699, 17.9936, 4.18774, 17.8268, 6.44028, 20.997, 10.6951, 21.0804, 13.3648, 18.1605, 15.7842, 17.9102, 15.7007, 13.1548, 14.783, 10.9857, 19.1213, -2.19583, 18.9544, -5.86664, 15.1167, -5.95007 )

[sub_resource type="Gradient" id=23]
colors = PoolColorArray( 1, 0.911056, 0.445313, 1, 0.949412, 1, 0, 1 )

[sub_resource type="GradientTexture" id=166]
gradient = SubResource( 23 )

[sub_resource type="Gradient" id=25]
colors = PoolColorArray( 1, 0.302344, 0, 1, 0.994531, 1, 0, 1 )

[sub_resource type="GradientTexture" id=167]
gradient = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=27]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.77
flag_disable_z = true
spread = 121.67
gravity = Vector3( 0, -1, 0 )
initial_velocity = 5.94
initial_velocity_random = 0.94
angular_velocity = 6.17
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color = Color( 1, 0.917647, 0, 1 )
color_ramp = SubResource( 167 )
color_initial_ramp = SubResource( 166 )

[sub_resource type="Animation" id=18]
resource_name = "BreakLeft"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("CartLeverBreak:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 3.5 ), Vector2( 0.91926, 3.30539 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CartLeverBreak:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BreakParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "BreakLeftBack"
tracks/0/type = "value"
tracks/0/path = NodePath("CartLeverBreak:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.91926, 3.30539 ), Vector2( -1, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CartLeverBreak:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BreakParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "BreakNeutral"
tracks/0/type = "value"
tracks/0/path = NodePath("CartLeverBreak:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CartLeverBreak:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BreakParticles2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BreakParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "BreakRight"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("CartLeverBreak:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 3.5 ), Vector2( -2.69046, 3.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CartLeverBreak:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BreakParticles2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D2:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=22]
resource_name = "BreakRightBack"
tracks/0/type = "value"
tracks/0/path = NodePath("CartLeverBreak:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2.69046, 3.25 ), Vector2( -1, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CartLeverBreak:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BreakParticles2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D2:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 2.98882, 14.5711 )

[sub_resource type="RectangleShape2D" id=168]
extents = Vector2( 0.7541, 12.3706 )

[sub_resource type="RayShape2D" id=165]
length = 6.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 14.8208, 4.88771 )

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=14]
blend_mode = 1

[sub_resource type="Curve" id=161]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.708667, -6.16016 ), 0.0, 0.0, 0, 0, Vector2( 1, -18.4805 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=163]
curve = SubResource( 161 )

[sub_resource type="ParticlesMaterial" id=162]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 3.31
flag_disable_z = true
gravity = Vector3( 0, 2, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 3.6
tangential_accel_random = 1.0
tangential_accel_curve = SubResource( 163 )
scale = 0.61
color = Color( 0.901961, 0.541176, 0.0313726, 1 )

[sub_resource type="Animation" id=172]
resource_name = "DamageL"
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=171]
resource_name = "DamageR"
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=169]
resource_name = "NoDamage"
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=170]
extents = Vector2( 5.06796, 10 )

[node name="MovingCart" type="KinematicBody2D"]
collision_layer = 142622720
collision_mask = 16393
collision/safe_margin = 0.001
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 21.0351, -12.9474 ],
"_edit_vertical_guides_": [ -3.4745, 1.42086 ]
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 164 )

[node name="MineCart" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Cartwheel" type="Sprite" parent="MineCart"]
position = Vector2( -10.5119, 16.5351 )
texture = ExtResource( 2 )

[node name="Cartwheel2" type="Sprite" parent="MineCart"]
position = Vector2( 8.54165, 16.5205 )
texture = ExtResource( 2 )

[node name="LEFT" type="RayCast2D" parent="MineCart"]
visible = false
position = Vector2( -19.1604, 19.4535 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 16385

[node name="RIGHT" type="RayCast2D" parent="MineCart"]
visible = false
position = Vector2( 17.8892, 19.4535 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 16385

[node name="ChangeSpeed" type="RayCast2D" parent="MineCart"]
position = Vector2( -12.6011, -11.8118 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 25 )

[node name="CartControl" type="Node2D" parent="MineCart"]

[node name="Light2D" type="Light2D" parent="MineCart/CartControl"]
position = Vector2( 5.75, 15.875 )
texture = ExtResource( 4 )
texture_scale = 0.15
color = Color( 1, 0.584314, 0, 1 )
energy = 0.0

[node name="Light2D2" type="Light2D" parent="MineCart/CartControl"]
position = Vector2( -8.125, 15.875 )
texture = ExtResource( 4 )
texture_scale = 0.15
color = Color( 1, 0.584314, 0, 1 )
energy = 0.0

[node name="BreakParticles" type="Particles2D" parent="MineCart/CartControl"]
position = Vector2( 6.16375, 14.9094 )
emitting = false
amount = 100
lifetime = 2.89
speed_scale = 3.0
randomness = 1.0
local_coords = false
draw_order = 1
process_material = SubResource( 27 )

[node name="BreakParticles2" type="Particles2D" parent="MineCart/CartControl"]
position = Vector2( -8.49157, 14.9094 )
emitting = false
amount = 100
lifetime = 2.89
speed_scale = 3.0
randomness = 1.0
local_coords = false
draw_order = 1
process_material = SubResource( 27 )

[node name="CartLeverBreak" type="Sprite" parent="MineCart/CartControl"]
position = Vector2( -1, 3.5 )
texture = ExtResource( 8 )

[node name="CartLeverCircle" type="Sprite" parent="MineCart/CartControl"]
position = Vector2( -1, -4 )
texture = ExtResource( 7 )

[node name="CartControlAnim" type="AnimationPlayer" parent="MineCart/CartControl"]
reset_on_save = false
anims/BreakLeft = SubResource( 18 )
anims/BreakLeftBack = SubResource( 21 )
anims/BreakNeutral = SubResource( 19 )
anims/BreakRight = SubResource( 20 )
anims/BreakRightBack = SubResource( 22 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -0.462419, 8.92421 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="REnd" type="CollisionShape2D" parent="."]
position = Vector2( 14.8875, -0.671546 )
shape = SubResource( 168 )

[node name="LEnd" type="CollisionShape2D" parent="."]
position = Vector2( -15.8673, -0.435311 )
shape = SubResource( 168 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.273612, 13.9663 )
shape = SubResource( 165 )

[node name="Metal" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -0.078476 )
collision_layer = 1048576
collision_mask = 7
audio_bus_name = "SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Metal"]
position = Vector2( -0.0768757, 9.47347 )
shape = SubResource( 12 )

[node name="Lamp" type="Sprite" parent="."]
visible = false
position = Vector2( -6.4745, 0.515043 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Lamp"]
modulate = Color( 1, 0.529412, 0.188235, 0.501961 )
material = SubResource( 13 )
position = Vector2( 0.0367136, 2.91792 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
color = Color( 0.996078, 0.529412, 0.176471, 1 )
energy = 0.8
shadow_enabled = true
shadow_gradient_length = 1.0
shadow_filter = 1
shadow_filter_smooth = 25.0

[node name="Light2D4" type="Sprite" parent="Lamp"]
modulate = Color( 0.819608, 0.45098, 0.180392, 1 )
self_modulate = Color( 1, 1, 1, 0.431373 )
material = SubResource( 14 )
position = Vector2( -0.00985909, 2.90386 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="Lamp"]
position = Vector2( -0.114998, 2.91423 )
amount = 30
lifetime = 3.63
randomness = 1.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 162 )

[node name="DamageAnim" type="AnimationPlayer" parent="."]
anims/DamageL = SubResource( 172 )
anims/DamageR = SubResource( 171 )
anims/NoDamage = SubResource( 169 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]
collision_layer = 64
collision_mask = 640
damage = 5

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 20.6652, 3.97748 )
shape = SubResource( 170 )
disabled = true

[node name="HitBox2" parent="." instance=ExtResource( 6 )]
collision_layer = 64
collision_mask = 640
damage = 5

[node name="CollisionShape2D" parent="HitBox2" index="0"]
position = Vector2( -21.6425, 3.97748 )
shape = SubResource( 170 )
disabled = true

[editable path="HitBox"]
[editable path="HitBox2"]
